link emailJS with contact sector

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -789,8 +789,21 @@ body.dark-theme {
   font-weight: initial;
 }
 
-/* Status color */
+.contact__notice{
+  font-size: var(--small-font-size);
+  position: absolute;
+  bottom: 2.8rem;
+  left: 1.5rem;
+}
 
+/* Status color */
+.color-red{
+  color: hsl(4, 71%, 51%);
+}
+
+.color-blue{
+  color: hsl(207, 56%, 45%);
+}
 
 /*=============== FOOTER ===============*/
 
