--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -248,7 +248,9 @@ body.dark-theme {
 }
 
 /* Active link */
-
+.active-link{
+  color: var(--title-color);
+}
 
 /*=============== HOME ===============*/
 .home__container{
@@ -859,7 +861,21 @@ body.dark-theme {
 }
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(207, 4%, 75%);
+}
 
+::-webkit-scrollbar-thumb{
+  background-color: hsl(207, 4%, 65%);
+  border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(207, 4%, 55%);
+  border-radius: .5rem;
+}
 
 /*=============== SCROLL UP ===============*/
 
