--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1132,5 +1132,11 @@ body.dark-theme {
   }
 
   /* Change background header */
+  .bg-header{
+    box-shadow: 0 4px 20px hsla(207, 24%, 35%, .1);
+  }
 
+  .dark-theme .bg-header{
+    box-shadow: 0 6px 24px hsla(207, 24%, 8%, .6);
+  }
 }
