--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1139,4 +1139,131 @@ body.dark-theme {
   .dark-theme .bg-header{
     box-shadow: 0 6px 24px hsla(207, 24%, 8%, .6);
   }
+
+  @media screen and (min-width: 1048px){
+    .container{
+      margin-inline: auto;
+    }
+  }
+
+  @media screen and (min-width: 1200px){
+    .section__border{
+      padding-bottom: 6rem;
+    }
+
+    .section__subtitle{
+      margin-bottom: 5rem ;
+      margin-top: 1.25rem;
+    }
+
+    .home__blob{
+      width: 330px;
+      height: 500px;
+      border-radius: 12.5rem;
+    }
+
+    .home__perfil{
+      width: 280px;
+      height: 440px;
+      border-radius: 10.6rem;
+    }
+
+    .home__perfil img{
+      width: 240px;
+    }
+
+    .home__shape-wawes{
+      width: 100px;
+      left: -4rem;
+      top: 10rem;
+    }
+
+    .home__shape-circle{
+      width: 200px;
+      bottom: -1rem;
+      right: -5rem;
+    }
+
+    .home__data{
+      row-gap: 2.5rem;
+    }
+
+    .home__social{
+      column-gap: 2rem;
+    }
+
+    .home__social-link{
+      font-size: 1.5rem;
+    }
+
+    .home__info{
+      grid-template-rows: repeat(3, 130px);
+      row-gap: 4rem;
+      margin-top: 16rem;
+    }
+
+    .skills__container{
+      column-gap: 10rem;
+    }
+
+    .skills__title{
+      margin-bottom: 3rem;
+    }
+
+    .skills__title i{
+      font-size: 1.25rem;
+    }
+
+    .skills__name{
+      font-size: var(--normal-font-size);
+    }
+
+    .skills__info{
+      gap: 3rem;
+    }
+
+    .qualification__container{
+      column-gap: 14rem;
+    }
+
+    .qualification__title i{
+      font-size: 1.25rem;
+    }
+
+    /* .qualification__name{
+      font-size: var(--h3-font-size);
+    } */
+
+    .qualfication__img{
+      width: 300px;
+      left: -6rem;
+      bottom: 5rem;
+    }
+
+    .projects__container{
+      width: 900px;
+    }
+
+    .projects__container .swiper-button-prev,
+    .projects__container .swiper-button-next{
+      font-size: 3rem;
+    }
+
+    .projects__container .swiper-button-prev{
+      left: -1rem;
+    }
+
+    .projects__container .swiper-button-next{
+      right: -1rem;
+    }
+
+    .projects__container .swiper-slide{
+      margin-bottom: 6.5rem;
+    }
+
+    .projects__img{
+      width: 320px;
+      margin-bottom: 2rem;
+    }
+  }
 }
