--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,11 +8,13 @@
   /*========== Colors ==========*/
   /*Color mode HSL(hue, saturation, lightness)*/
   --first-color: hsl(27, 22.2%, 64.7%);
+  --first-color-alt: rgb(176, 141, 111);
   --title-color: hsl(27, 4%, 16%);
   --text-color: hsl(27, 4%, 28%);
   --text-color-light: hsl(27, 4%, 56%);
   --body-color: hsl(27, 4%, 99%);
   --container-color: hsl(27, 4%, 95%);
+
 
   /* Change the first number */
   /* Blue: 207 - Purple: 250 - Pink: 356 - Teal: 174 */
@@ -209,16 +211,18 @@ body.dark-theme {
 }
 
 .nav{
-  height: calc(var(--header-height) + .5rem);
+  height: calc(var(--header-height));
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--body-color);
+  background-color: hsl(27deg 67% 91%);
   box-shadow: 0 4px 20px hsla(207, 24%, 35%, .1);
   padding-inline: 1.5rem;
-  border-radius: 25px;
+  border-radius: 50px;
   transition: background .8s; /*For dark mode animation*/
+  opacity: .96;
 }
+
 
 .nav__logo,
 .nav__toggle,
@@ -229,12 +233,24 @@ body.dark-theme {
 .nav__logo{
   font-family: var(--title-font);
   font-weight: var(--font-medium);
+  color: var(--text-color);
+  transition: .4s;
+}
+
+.nav__logo:hover{
+  color: var(--first-color-alt);
 }
 
 .nav__toggle{
   display: flex;
   font-size: 1.25rem;
   cursor: pointer;
+}
+
+.nav__buttons{
+  flex-direction: row;
+  display: flex;
+  gap: 1rem;
 }
 
 
@@ -253,6 +269,7 @@ body.dark-theme {
     transition: bottom .3s;
   }
 }
+
 
 .nav__list{
   grid-template-columns: repeat(3, max-content);
@@ -340,10 +357,10 @@ body.dark-theme {
 
 .home__blob{
   position: relative;
-  width: 216px;
-  height: 324px;
+  width: 224px;
+  height: 328px;
   background-color: var(--body-color);
-  border: 2px solid var(--gradient-color);
+  border: 2px solid var(--first-color);
   justify-self: center;
   border-radius: 6.25rem;
   place-items: center;
@@ -464,15 +481,12 @@ body.dark-theme {
   margin-bottom: 2rem;
 }
 
-
-
-
-
-
-
-
-
-
+.about__description mark{
+  display: inline-block;
+  line-height: 0;
+  padding-bottom: 0.5em;
+  background-color: hsl(27deg 67% 91%);
+}
 /*=============== HOME ===============*/
 /*
 .home__shape-wawes,
@@ -738,8 +752,6 @@ body.dark-theme {
   transform: rotate(15deg);
   opacity: .1;
 }
-/*=============== SERVICES ===============*/
-
 
 /*=============== PROJECTS ===============*/
 .projects__container{
@@ -1200,9 +1212,17 @@ body.dark-theme {
     margin-inline: 1rem;
   }
 
-
   .nav__list{
     gap: 1rem 1.25rem;
+  }
+
+  .home__buttons{
+    flex-direction: column;
+  }
+
+  .home__handle{
+    width: 150px;
+    height: 253px;
   }
 
   .skills__info{
